--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 DATABASE_URL=postgresql+psycopg://quiz_app_user:quiz_app_user@localhost:5432/quiz_app_db
 JWT_SECRET=change-me
 CORS_ORIGINS=http://localhost:5173
-ALLOW_ADMIN_SELF_REGISTER=true         # turn OFF after you create the admin
-ADMIN_BOOTSTRAP_SECRET=change-me  # used to create the first admin account
+ALLOW_ADMIN_SELF_REGISTER=true
+ADMIN_BOOTSTRAP_SECRET=change-me 
