--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-DATABASE_URL=postgresql+psycopg://quiz_app_user:quiz_app_user@localhost:5432/quiz_app_db
-DATABASE_URL=postgresql://quiz_app_user:akpRlcUz6YikNNTK4QRzz98AtlHWkcCH@dpg-d38q7pfdiees73cpgal0-a/quiz_app_db_6ktu
+# DATABASE_URL=postgresql://quiz_app_user:akpRlcUz6YikNNTK4QRzz98AtlHWkcCH@dpg-d38q7pfdiees73cpgal0-a/quiz_app_db_6ktu
+DATABASE_URL=postgresql://quiz_app_user:akpRlcUz6YikNNTK4QRzz98AtlHWkcCH@dpg-d38q7pfdiees73cpgal0-a.oregon-postgres.render.com/quiz_app_db_6ktu
 JWT_SECRET=change-me
 CORS_ORIGINS=http://localhost:5173
 ALLOW_ADMIN_SELF_REGISTER=true
