--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ frontend/dist/
 frontend/.vite/
 frontend/coverage/
 frontend/*.log
+frontend/.env
+frontend/.env.*
 
 # --- General ---
 .DS_Store
