--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,7 +8,8 @@ python-dotenv
 
 # Auth / security
 python-jose[cryptography]>=3.3.0,<4
-passlib[bcrypt]>=1.7.4,<2
+passlib=1.7.4
+bcrypt<4.0.0                 # keep bcrypt on 3.x to satisfy passlib 1.7.x
 python-multipart>=0.0.9    # needed if you use form data (e.g., OAuth2PasswordRequestForm)
 
 # Database stack
